--- a/server/render.yaml
+++ b/server/render.yaml
@@ -1,6 +1,6 @@
 databases:
   - name: airbnb_clone_db
-    databaseName: airbnb_clone
+    databaseName: airbnb_clone_uzc4
     user: airbnb_clone_user
 
 services:
@@ -33,4 +33,4 @@ services:
       - key: JWT_SECRET
         generateValue: true
       - key: CLIENT_URL
-        value: https://airbnb-clone-frontend.onrender.com
+        value: https://airbnb-clone-frontend-ewxv.onrender.com
