--- a/render.yaml
+++ b/render.yaml
@@ -7,8 +7,8 @@ services:
   - type: web
     name: airbnb-clone-backend
     env: node
-    buildCommand: npm install
-    startCommand: node app.js
+    buildCommand: cd src && npm install && cd ..
+    startCommand: cd src && node app.js
     envVars:
       - key: DB_USER
         fromDatabase:
